[package]
name = "drift-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
argh = "0.1.12"
#drift-sdk = { package = "drift-sdk", git = "ssh://git@github.com/bestarch-ae/drift-sdk-rs.git", rev = "175796a" }
drift-sdk = { path = "../drift-sdk-rs" }
env_logger = "0.10.1"
futures-util = "0.3.29"
log = "0.4.20"
rust_decimal = "1.33.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "*"
tokio = "*"
tokio-tungstenite = "*"
thiserror = "1.0.38"
solana-transaction-status = "1.14"
bincode = "1.3"
base64 = "0.22"
